Implemented on-click listener that will display the question when clicking on a clue.

--- a/index.html
+++ b/index.html
@@ -19,46 +19,46 @@
       <span class="category game-board__section" data-column="5">CAT 6</span>
     </div>
     <div class='column' data-column-num="0">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
     <div class='column' data-column-num="1">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
     <div class='column' data-column-num="2">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
     <div class='column' data-column-num="3">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
     <div class='column' data-column-num="4">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
     <div class='column' data-column-num="5">
-      <div class='column__clue game-board__section'>Clue 1</div>
-      <div class='column__clue game-board__section'>Clue 2</div>
-      <div class='column__clue game-board__section'>Clue 3</div>
-      <div class='column__clue game-board__section'>Clue 4</div>
-      <div class='column__clue game-board__section'>Clue 5</div>
+      <div class='column__clue game-board__section' data-row-num="0">Clue 1</div>
+      <div class='column__clue game-board__section' data-row-num="1">Clue 2</div>
+      <div class='column__clue game-board__section' data-row-num="2">Clue 3</div>
+      <div class='column__clue game-board__section' data-row-num="3">Clue 4</div>
+      <div class='column__clue game-board__section' data-row-num="4">Clue 5</div>
     </div>
   </div>
 </body>
